src/objects/Apttus_Revenue2__RevenueAgreementFilterProperties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Revenue Agreement Filter Properties. The record should be named as &quot;System Properties&quot;.</description>
    <fields>
        <fullName>Apttus_Revenue2__ConsoleRevSummaryCount__c</fullName>
        <description>Stores the Rev Summary count, which need to be populated in Revenue console</description>
        <inlineHelpText>Stores the Rev Summary count, which need to be populated in Revenue console</inlineHelpText>
        <label>Console Rev Summary Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Field10Label__c</fullName>
        <description>The name of the 10th field to present to the user</description>
        <label>Field 10 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Field1Label__c</fullName>
        <description>The name of the 1st field to present to the user</description>
        <label>Field 1 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Field2Label__c</fullName>
        <description>The name of the 2nd field to present to the user</description>
        <label>Field 2 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__IsField10Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the 10th field is to be presented to the user otherwise the field will be hidden.</description>
        <label>Field 10 Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__IsField1Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the 1st field is to be presented to the user otherwise the field will be hidden.</description>
        <label>Field 1 Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__IsField2Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the 2nd field is to be presented to the user otherwise the field will be hidden.</description>
        <label>Field 2 Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Revenue Agreement Filter Properties</label>
</CustomObject>